# ybox

./: .flake8  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  basic.ini  code-check.sh  pyproject.toml  pyrightconfig.json  requirements-flake8.txt  requirements-test.txt  requirements-venv.txt  requirements.txt  run-tests.sh  tests-coverage.sh  tox.ini  zbox-create  zbox-destroy
.github/workflows/: python-package.yml  python-tests.yml
arch/: distro.ini  init-base.sh  init-user.sh  init.sh  list_fmt.awk  list_fmt.py  list_fmt_common.py  list_fmt_long.py  pkgdeps
arch/confs/: apps.ini  chromium.ini
arch/examples/: apps.ini  dev.ini  games.ini
completions/: zbox.fish
conda/: activate-conda.bash  activate-conda.fish  activate-conda.zsh  setup-conda.sh  ybox-conda.yaml
profiles/: games.ini
pyenv/: activate.bash  activate.fish  activate.sh  activate.zsh  install.sh  setup-venv.sh
resources/: entrypoint-base.sh  entrypoint-cp.sh  entrypoint.sh  prime-run
src/: code-checker.sh  ybox-cmd  ybox-control  ybox-create  ybox-destroy  ybox-launch  ybox-logs  ybox-ls  ybox-pkg  ybox-restart  zbox-cmd  zbox-create  zbox-destroy  zbox-logs  zbox-ls  zbox-pkg  zbox-restart  zbox-shell
src/completions/: zbox.fish
src/distros/arch/: distro.ini  init-user.sh  list_fmt.py  list_fmt_common.py  list_fmt_long.py  pkgdeps.py
src/profiles/: apps.ini
src/resources/: entrypoint-base.sh
src/ybox/: __init__.py  cmd.py  config.py  consts.py  env.py  filelock.py  graphics.py  print.py  resolve.py  state.py  util.py
src/ybox/conf/completions/: ybox.fish
src/ybox/conf/distros/: supported.list
src/ybox/conf/distros/arch/: add-gpg-key.sh  distro.ini  init-base.sh  init-user.sh  init.sh  list_fmt.py  list_fmt_common.py  list_fmt_long.py  pkgdeps.py
src/ybox/conf/distros/cachyos/: distro.ini
src/ybox/conf/distros/deb-generic/: check-package.sh  distro.ini  fetch-gpg-key-id.sh  init-base.sh  init.sh  list_fmt_long.py  pkgdeps.py
src/ybox/conf/distros/deb-oldstable/: distro.ini
src/ybox/conf/distros/deb-stable/: distro.ini
src/ybox/conf/distros/neon/: distro.ini
src/ybox/conf/distros/ubuntu2204/: distro.ini  init-base.sh  init-user.sh  init.sh  list_fmt_long.py
src/ybox/conf/distros/ubuntu2404/: distro.ini
src/ybox/conf/profiles/: apps.ini  basic.ini  dev.ini  games.ini
src/ybox/conf/resources/: entrypoint-base.sh  entrypoint-common.sh  entrypoint-cp.sh  entrypoint-root.sh  entrypoint-user.sh  entrypoint.sh  prime-run  run-in-dir  run-user-bash-cmd  ybox-autostart.template  ybox-systemd.template
src/ybox/migrate/: 0.9.0-0.9.10:0.9.11.py  0.9.0-0.9.13:0.9.14.py  0.9.0-0.9.16.2:0.9.17.py  0.9.0-0.9.16.3:0.9.17.py  0.9.0-0.9.6:0.9.7.py  0.9.1-0.9.6:0.9.7.py  0.9.5:0.9.6.py
src/ybox/pkg/: clean.py  info.py  inst.py  list.py  mark.py  repair.py  repo.py  search.py  uninst.py  update.py
src/ybox/run/: cmd.py  control.py  create.py  destroy.py  graphics.py  launch.py  logs.py  ls.py  pkg.py  restart.py
src/ybox/schema/: 0.9.1-added.sql  0.9.6-added.sql  init.sql
src/ybox/schema/migrate/: 0.9.0:0.9.1.sql  0.9.1:0.9.2.sql  0.9.2:0.9.3.sql  0.9.5:0.9.6.sql
src/zbox/: cmd.py  config.py  env.py  filelock.py  pkg_inst.py  print.py  state.py  util.py
src/zbox/conf/completions/: zbox.fish
src/zbox/conf/profiles/: basic.ini
src/zbox/conf/resources/: entrypoint-common.sh  entrypoint-cp.sh
src/zbox/pkg/: inst.py  list.py  search.py  uninst.py  update.py
src/zbox/run/: cmd.py  create.py  destroy.py  logs.py  ls.py  pkg.py  restart.py  shell.py
src/zbox_run/: create.py  logs.py
tests/: create-all-migration-dbs.sh  create_migration_db.py
tests/functional/: distro_base.py  test_create_destroy.py
tests/functional/resources/: arch_distro_minimal.ini  basic_no_shared.ini  distro_minimal.ini
tests/resources/: basic_no_shared.ini  containers.json  distro_minimal.ini  packages.json  repos.json
tests/resources/migration/: containers.json  pkgs.json
tests/unit/: test_cmd.py  test_config.py  test_env.py  test_filelock.py  test_state.py  util.py
typings/: apt_pkg.pyi  pyalpm.pyi
zbox/: config.py  entrypoint.py  env.py  filelock.py  state.py  util.py
(+10 files in other folders)
