[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zbox-py"
version = "0.9.0"
authors = [
  { name = "Sumedh Wale", email = "sumwale@yahoo.com" },
]
description = "Run Linux distribution inside a container"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "simple-term-menu",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["Linux in container", "toolbox"]

[project.urls]
Homepage = "https://github.com/sumwale/zbox"
Issues = "https://github.com/sumwale/zbox/issues"

[project.scripts]
zbox-cmd = "zbox.run.cmd:main"
zbox-create = "zbox.run.create:main"
zbox-destroy = "zbox.run.destroy:main"
zbox-logs = "zbox.run.logs:main"
zbox-ls = "zbox.run.ls:main"
zbox-pkg = "zbox.run.pkg:main"
zbox-restart = "zbox.run.restart:main"

[tool.setuptools]
include-package-data = true
